syntax = "proto2";

package com.android.tools.idea.gradle.project.sync.ng.nosyncbuilder.proto;

option java_package = "com.android.tools.idea.gradle.project.sync.ng.nosyncbuilder.proto";
option java_outer_classname = "AndroidProjectProto";

import "File.proto";

// rootFolder and signingConfigs are not cached to proto because it doesn't make sense.
message AndroidProject {
    enum ProjectType {
        PROJECT_TYPE_UNSPECIFIED = 0;
        APP = 1;
        LIBRARY = 2;
        TEST = 3;
        INSTANTAPP = 4;
        FEATURE = 5;
        DYNAMIC_FEATURE = 6;
    }
    optional ProjectType project_type = 1; // required
    repeated string variant_names = 2;
    optional AaptOptions aapt_options = 3; // required
    optional JavaCompileOptions java_compile_options = 4; // required
    optional File build_folder = 5; // required
    optional bool base_split = 6; // required
    repeated string dynamic_features = 7;
    optional string model_version = 8; // required
    optional string name = 9; // required
    optional string compile_target = 10; // required
    repeated File boot_classpath = 11;
}

message AaptOptions {
    enum Namespacing {
        NAMESPACING_UNSPECIFIED = 0;
        DISABLED = 1;
        REQUIRED = 2;
    }
    optional Namespacing namespacing = 1; // required
}

message JavaCompileOptions {
    optional string encoding = 1; // required
    optional string source_compatibility = 2; // required
    optional string target_compatibility = 3; // required
}
